@startuml module_domain_models

title Domain Model (Attributes + Methods + Relationships)

skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam classFontSize 16
skinparam classAttributeFontSize 14
skinparam classBackgroundColor #FDF6E3
skinparam classBorderColor #073642
skinparam classArrowFontSize 14
skinparam defaultTextAlignment center
skinparam shadowing false
skinparam linetype ortho


class User {
    +id: String
    +name: String
    +email: String
    +role: UserRole
    +avatarUrl: String?
    +isActive: Boolean
    +createdAt: Instant
    +updatedAt: Instant
    --
    +login(email: String, password: String, role: UserRole): Flow<Resource<User>>
    +register(user: User, password: String): Flow<Resource<User>>
    +forgotPassword(email: String): Flow<Resource<String>>
    +changePassword(currentPassword: String, newPassword: String): Flow<Resource<Unit>>
    +signOut(): Flow<Resource<Unit>>
    +getCurrentUser(): Flow<Resource<User?>>
    +getUserById(userId: String): Flow<Resource<User?>>
    +getUserByEmail(email: String): Flow<Resource<User?>>
    +getUsersByRole(role: String): Flow<Resource<List<User>>>
    +getAllUsers(): Flow<Resource<List<User>>>
    +addUser(user: User, id: String? = null): Flow<Resource<String>>
    +updateUser(id: String, user: User): Flow<Resource<Unit>>
    +deleteUser(userId: String): Flow<Resource<Unit>>
    +updateAvatar(userId: String, avatarUrl: String): Flow<Resource<Unit>>
}

class Teacher {
    +id: String
    +userId: String
    +specialization: String
    +level: String
    +experienceYears: Int
    +createdAt: Instant
    +updatedAt: Instant
    --
    +getTeacherProfile(userId: String): Flow<Resource<Teacher>>
    +updateTeacherProfile(teacherId: String, specialization: String? = null, level: String? = null, experienceYears: Int? = null): Flow<Resource<Unit>>
    +deleteTeacherProfile(teacherId: String): Flow<Resource<Unit>>
    +getClassesByTeacher(teacherId: String): Flow<Resource<List<Class>>>
    +getGamesByTeacher(teacherId: String): Flow<Resource<List<MiniGame>>>
}

class Student {
    +id: String
    +userId: String
    +dateOfBirth: LocalDate
    +gradeLevel: String
    +createdAt: Instant
    +updatedAt: Instant
    --
    +getStudentProfile(studentId: String): Flow<Resource<Student>>
    +getStudentProfileByUserId(userId: String): Flow<Resource<Student?>>
    +updateStudentProfile(studentId: String, dateOfBirth: LocalDate? = null, gradeLevel: String? = null): Flow<Resource<Unit>>
    +linkParentToStudent(studentId: String, parentId: String, relationship: String, isPrimaryGuardian: Boolean = true): Flow<Resource<Unit>>
    +getClassesByStudent(studentId: String): Flow<Resource<List<Class>>>
    +getStudentTestResults(studentId: String): Flow<Resource<List<StudentTestResult>>>
    +getAllResultsByStudent(studentId: String): Flow<Resource<List<StudentMiniGameResult>>>
}

class Parent {
    +id: String
    +userId: String
    +createdAt: Instant
    +updatedAt: Instant
    --
    +getParentProfile(parentId: String): Flow<Resource<Parent?>>
    +getLinkedStudents(parentId: String): Flow<Resource<List<Student>>>
    +getStudentClassesForParent(parentId: String, studentId: String? = null, enrollmentStatus: EnrollmentStatus? = null): Flow<Resource<List<ClassEnrollmentInfo>>>
    +updateParentProfile(parent: Parent): Flow<Resource<Unit>>
    +unlinkStudent(parentId: String, studentId: String): Flow<Resource<Unit>>
}

class ParentStudent {
    +parentId: String
    +studentId: String
    +relationship: RelationshipType
    +linkedAt: Instant
    +isPrimaryGuardian: Boolean
    --
    +searchStudent(query: String): Flow<Resource<List<StudentSearchResult>>>
    +getLinkedStudents(parentId: String): Flow<Resource<List<LinkedStudentInfo>>>
    +getStudentClassesForParent(parentId: String, studentId: String? = null, enrollmentStatus: EnrollmentStatus? = null): Flow<Resource<List<ClassEnrollmentInfo>>>
    +checkStudentLinkedToParent(parentId: String, studentId: String): Flow<Resource<Boolean>>
    +checkStudentHasPrimaryGuardian(studentId: String): Flow<Resource<Boolean>>
    +checkStudentHasOtherPrimaryGuardian(studentId: String, parentId: String): Flow<Resource<Boolean>>
    +linkParentToStudent(studentId: String, parentId: String, relationship: String, isPrimaryGuardian: Boolean = true): Flow<Resource<Unit>>
    +unlinkStudent(parentId: String, studentId: String): Flow<Resource<Unit>>
    +updateRelationship(parentId: String, studentId: String, relationship: RelationshipType, isPrimaryGuardian: Boolean): Flow<Resource<Unit>>
    +createStudentAccountForParent(parentId: String, email: String, password: String, name: String, dateOfBirth: LocalDate, gradeLevel: String, relationship: String, isPrimaryGuardian: Boolean = true): Flow<Resource<Unit>>
}

class StudentSearchResult {
    +student: Student
    +user: User
}

class LinkedStudentInfo {
    +student: Student
    +user: User
    +parentStudent: ParentStudent
}

class Class {
    +id: String
    +teacherId: String
    +name: String
    +classCode: String
    +gradeLevel: Int?
    +subject: String?
    +createdAt: Instant
    +updatedAt: Instant
    --
    +addClass(classObj: Class): Flow<Resource<Class?>>
    +updateClass(classId: String, classObj: Class): Flow<Resource<Boolean>>
    +deleteClass(classId: String): Flow<Resource<Boolean>>
    +getAllClasses(): Flow<Resource<List<Class>>>
    +getClassById(classId: String): Flow<Resource<Class?>>
    +getClassByCode(classCode: String): Flow<Resource<Class?>>
    +getClassesByTeacher(teacherId: String): Flow<Resource<List<Class>>>
    +getClassesByStudent(studentId: String): Flow<Resource<List<Class>>>
}

class ClassStudent {
    +classId: String
    +studentId: String
    +enrolledDate: Instant
    +enrollmentStatus: EnrollmentStatus
    +approvedBy: String
    +rejectionReason: String
    --
    +addStudentToClass(classId: String, studentId: String, status: EnrollmentStatus = EnrollmentStatus.PENDING, approvedBy: String = ""): Flow<Resource<Boolean>>
    +removeStudentFromClass(classId: String, studentId: String): Flow<Resource<Boolean>>
    +approveEnrollment(classId: String, studentId: String, approvedBy: String): Flow<Resource<Boolean>>
    +rejectEnrollment(classId: String, studentId: String, rejectionReason: String, rejectedBy: String): Flow<Resource<Boolean>>
    +updateEnrollmentStatus(classId: String, studentId: String, status: EnrollmentStatus, approvedBy: String = "", rejectionReason: String = ""): Flow<Resource<Boolean>>
}

class Lesson {
    +id: String
    +teacherId: String
    +classId: String
    +title: String
    +description: String?
    +order: Int
    +createdAt: Instant
    +updatedAt: Instant
    --
    +createLesson(lesson: Lesson): Flow<Resource<Lesson>>
    +getLessonsByClass(classId: String): Flow<Resource<List<Lesson>>>
    +getLessonById(lessonId: String): Flow<Resource<Lesson?>>
    +updateLesson(lessonId: String, lesson: Lesson): Flow<Resource<Boolean>>
    +deleteLesson(lessonId: String): Flow<Resource<Boolean>>
}

class LessonContent {
    +id: String
    +lessonId: String
    +title: String
    +contentType: ContentType
    +content: String
    +order: Int
    +createdAt: Instant
    +updatedAt: Instant
    --
    +getContentByLesson(lessonId: String): Flow<Resource<List<LessonContent>>>
    +getContentById(contentId: String): Flow<Resource<LessonContent>>
    +addContent(content: LessonContent, fileStream: InputStream? = null, fileSize: Long = 0): Flow<Resource<LessonContent>>
    +updateContent(contentId: String, content: LessonContent, newFileStream: InputStream? = null, newFileSize: Long = 0): Flow<Resource<Boolean>>
    +deleteContent(contentId: String): Flow<Resource<Boolean>>
    +getContentUrl(content: LessonContent, expirySeconds: Int = 3600): Flow<Resource<String>>
}

class Test {
    +id: String
    +classId: String
    +lessonId: String
    +title: String
    +description: String?
    +totalScore: Double
    +startTime: Instant
    +endTime: Instant
    +createdAt: Instant
    +updatedAt: Instant
    --
    +createTest(test: Test): Flow<Resource<Test>>
    +updateTest(test: Test): Flow<Resource<Test>>
    +deleteTest(testId: String): Flow<Resource<Unit>>
    +getTestDetails(testId: String): Flow<Resource<Test>>
    +getTestsByLesson(lessonId: String): Flow<Resource<List<Test>>>
    +getTestsByClasses(classIds: List<String>): Flow<Resource<List<Test>>>
    +submitTest(studentId: String, testId: String, answers: Map<String, List<String>>): Flow<Resource<StudentTestResult>>
}

class TestQuestion {
    +id: String
    +testId: String
    +content: String
    +score: Double
    +questionType: QuestionType
    +mediaUrl: String?
    +timeLimit: Int
    +order: Int
    +createdAt: Instant
    +updatedAt: Instant
    --
    +createQuestion(question: TestQuestion): Flow<Resource<TestQuestion>>
    +updateQuestion(question: TestQuestion): Flow<Resource<TestQuestion>>
    +deleteQuestion(questionId: String): Flow<Resource<Unit>>
    +getQuestionById(questionId: String): Flow<Resource<TestQuestion?>>
    +getQuestionsByTest(testId: String): Flow<Resource<List<TestQuestion>>>
}

class TestOption {
    +id: String
    +testQuestionId: String
    +content: String
    +isCorrect: Boolean
    +order: Int
    +mediaUrl: String?
    +createdAt: Instant
    +updatedAt: Instant
    --
    +createOption(option: TestOption): Flow<Resource<TestOption>>
    +updateOption(option: TestOption): Flow<Resource<TestOption>>
    +deleteOption(optionId: String): Flow<Resource<Unit>>
    +getOptionsByQuestion(questionId: String): Flow<Resource<List<TestOption>>>
    +getOptionById(optionId: String): Flow<Resource<TestOption?>>
}

class StudentTestResult {
    +id: String
    +studentId: String
    +testId: String
    +score: Double
    +completionStatus: TestStatus
    +submissionTime: Instant
    +durationSeconds: Long
    +createdAt: Instant
    +updatedAt: Instant
    --
    +submitTestResult(result: StudentTestResult, answers: Map<String, Any>): Flow<Resource<StudentTestResult>>
    +getStudentResult(studentId: String, testId: String): Flow<Resource<StudentTestResult?>>
    +getResultsByTest(testId: String): Flow<Resource<List<StudentTestResult>>>
    +getStudentTestResults(studentId: String): Flow<Resource<List<StudentTestResult>>>
}

class StudentTestAnswer {
    +id: String
    +resultId: String
    +questionId: String
    +answer: String
    +isCorrect: Boolean
    +earnedScore: Double
    +createdAt: Instant
    +updatedAt: Instant
    --
    +updateStudentAnswer(answer: StudentTestAnswer): Flow<Resource<StudentTestAnswer>>
}

class MiniGame {
    +id: String
    +teacherId: String
    +lessonId: String
    +title: String
    +description: String
    +level: Level
    +createdAt: Instant
    +updatedAt: Instant
    --
    +createGame(game: MiniGame): Flow<Resource<MiniGame>>
    +getGameById(gameId: String): Flow<Resource<MiniGame?>>
    +getQuestionsByGame(gameId: String): Flow<Resource<List<MiniGameQuestion>>>
    +getFilteredGames(level: String?): Flow<Resource<List<MiniGame>>>
    +getGamesByTeacher(teacherId: String): Flow<Resource<List<MiniGame>>>
    +getGamesByLesson(lessonId: String): Flow<Resource<List<MiniGame>>>
    +updateGame(game: MiniGame): Flow<Resource<MiniGame>>
    +deleteGame(gameId: String): Flow<Resource<Unit>>
    +searchGames(query: String, teacherId: String? = null): Flow<Resource<List<MiniGame>>>
}

class MiniGameQuestion {
    +id: String
    +miniGameId: String
    +content: String
    +questionType: QuestionType
    +score: Double
    +timeLimit: Long
    +order: Int
    +createdAt: Instant
    +updatedAt: Instant
    --
    +createQuestion(question: MiniGameQuestion): Flow<Resource<MiniGameQuestion>>
    +updateQuestion(question: MiniGameQuestion): Flow<Resource<MiniGameQuestion>>
    +deleteQuestion(questionId: String): Flow<Resource<Unit>>
    +getQuestionById(questionId: String): Flow<Resource<MiniGameQuestion?>>
}

class MiniGameOption {
    +id: String
    +miniGameQuestionId: String
    +content: String
    +mediaUrl: String?
    +isCorrect: Boolean
    +order: Int
    +hint: String?
    +pairId: String?
    +pairContent: String?
    +createdAt: Instant
    +updatedAt: Instant
    --
    +createOption(option: MiniGameOption): Flow<Resource<MiniGameOption>>
    +updateOption(option: MiniGameOption): Flow<Resource<MiniGameOption>>
    +deleteOption(optionId: String): Flow<Resource<Unit>>
    +getOptionsByQuestion(questionId: String): Flow<Resource<List<MiniGameOption>>>
    +getOptionById(optionId: String): Flow<Resource<MiniGameOption?>>
}

class StudentMiniGameResult {
    +id: String
    +studentId: String
    +miniGameId: String
    +score: Double
    +maxScore: Double
    +completionStatus: CompletionStatus
    +submissionTime: Instant
    +durationSeconds: Long
    +attemptNumber: Int
    +createdAt: Instant
    +updatedAt: Instant
    --
    +submitMiniGameResult(result: StudentMiniGameResult, answers: List<StudentMiniGameAnswer>): Flow<Resource<StudentMiniGameResult>>
    +getAllStudentResults(studentId: String, miniGameId: String): Flow<Resource<List<StudentMiniGameResult>>>
    +getAllResultsByStudent(studentId: String): Flow<Resource<List<StudentMiniGameResult>>>
    +getStudentResult(resultId: String): Flow<Resource<StudentMiniGameResult?>>
    +getLatestResult(studentId: String, miniGameId: String): Flow<Resource<StudentMiniGameResult?>>
    +getBestResult(studentId: String, miniGameId: String): Flow<Resource<StudentMiniGameResult?>>
}

class StudentMiniGameAnswer {
    +id: String
    +resultId: String
    +questionId: String
    +answer: String
    +isCorrect: Boolean
    +earnedScore: Double
    +createdAt: Instant
    +updatedAt: Instant
    --
    +getStudentAnswers(resultId: String): Flow<Resource<List<StudentMiniGameAnswer>>>
}

class StudentLessonProgress {
    +id: String
    +studentId: String
    +lessonId: String
    +progressPercentage: Int
    +lastAccessedContentId: String?
    +lastAccessedAt: Instant
    +isCompleted: Boolean
    +timeSpentSeconds: Long
    +createdAt: Instant
    +updatedAt: Instant
}

class DailyStudyTime {
    +id: String
    +studentId: String
    +date: LocalDate
    +durationSeconds: Long
    +createdAt: Instant
    +updatedAt: Instant
}

class Conversation {
    +id: String
    +type: ConversationType
    +title: String?
    +lastMessageAt: Instant
    +createdAt: Instant
    +updatedAt: Instant
}

class ConversationParticipant {
    +conversationId: String
    +userId: String
    +joinedAt: Instant
    +lastViewedAt: Instant
    +isMuted: Boolean
}

class Message {
    +id: String
    +senderId: String
    +recipientId: String
    +content: String
    +sentAt: Instant
    +isRead: Boolean
    +conversationId: String
    +createdAt: Instant
    +updatedAt: Instant
}

class Notification {
    +id: String
    +userId: String
    +senderId: String?
    +type: NotificationType
    +title: String
    +content: String
    +referenceObjectId: String?
    +referenceObjectType: String?
    +isRead: Boolean
    +createdAt: Instant
    --
    +getNotificationsForUser(userId: String): Flow<Resource<List<Notification>>>
    +getNotificationsBySenderId(senderId: String): Flow<Resource<List<Notification>>>
    +markAsRead(notificationId: String): Flow<Resource<Unit>>
    +getUnreadCount(userId: String): Flow<Resource<Int>>
    +sendNotificationToTeacher(teacherToken: String, notification: Notification): Flow<Resource<Unit>>
    +saveNotification(notification: Notification): Flow<Resource<String>>
}

class ClassEnrollmentInfo {
    +classId: String
    +className: String
    +classCode: String
    +teacherId: String
    +teacherName: String
    +enrollmentStatus: EnrollmentStatus
    +enrolledDate: Instant?
    +approvedBy: String?
    +rejectionReason: String?
    +studentCount: Int
}

class StudyTimeStatistics {
    +studentId: String
    +totalStudyTimeSeconds: Long
    +dailyStudyTimes: List<DailyStudyTime>
    +startDate: LocalDate
    +endDate: LocalDate
}

class StudentGameResult {
    +id: String
    +studentId: String
    +miniGameId: String
    +score: Double
    +maxScore: Double
    +completionStatus: CompletionStatus
    +submissionTime: Instant
    +durationSeconds: Long
    +attemptNumber: Int
    +createdAt: Instant
    +updatedAt: Instant
}

class SyncStatus {
    +id: String
    +lastSyncTime: Instant
    +syncType: String
    +status: String
    +errorMessage: String?
    +retryCount: Int
    +createdAt: Instant
    +updatedAt: Instant
}

' ===== Relationships inferred from foreign keys (ids) + multiplicities =====

User "1" -- "0..1" Student : userId
User "1" -- "0..1" Teacher : userId
User "1" -- "0..1" Parent : userId

Teacher "1" -- "0..*" Class : teacherId
Teacher "1" -- "0..*" Lesson : teacherId
Teacher "1" -- "0..*" MiniGame : teacherId
Class "1" -- "0..*" Lesson : classId
Lesson "1" -- "0..*" LessonContent : lessonId
Lesson "1" -- "0..*" Test : lessonId

Test "1" *-- "1..*" TestQuestion : testId
TestQuestion "1" *-- "0..*" TestOption : testQuestionId

Student "1" -- "0..*" StudentTestResult : studentId
Test "1" -- "0..*" StudentTestResult : testId
StudentTestResult "1" *-- "0..*" StudentTestAnswer : resultId
TestQuestion "1" -- "0..*" StudentTestAnswer : questionId

Lesson "1" -- "0..*" MiniGame : lessonId
MiniGame "1" *-- "1..*" MiniGameQuestion : miniGameId
MiniGameQuestion "1" *-- "0..*" MiniGameOption : miniGameQuestionId

Student "1" -- "0..*" StudentMiniGameResult : studentId
MiniGame "1" -- "0..*" StudentMiniGameResult : miniGameId
StudentMiniGameResult "1" *-- "0..*" StudentMiniGameAnswer : resultId
MiniGameQuestion "1" -- "0..*" StudentMiniGameAnswer : questionId

Class "1" -- "0..*" ClassStudent : classId
Student "1" -- "0..*" ClassStudent : studentId

Parent "1" -- "0..*" ParentStudent : parentId
Student "1" -- "0..*" ParentStudent : studentId

Conversation "1" *-- "1..*" ConversationParticipant : conversationId
User "1" -- "0..*" ConversationParticipant : userId
Conversation "1" *-- "0..*" Message : conversationId
User "1" -- "0..*" Message : senderId
User "1" -- "0..*" Message : recipientId

User "1" -- "0..*" Notification : userId
User "1" -- "0..*" Notification : senderId

@enduml
